--- a/app/src/main/res/layout/activity_classfier.xml
+++ b/app/src/main/res/layout/activity_classfier.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ClassifierActivity">
+    tools:context=".activities.ClassifierActivity">
 
     <ImageView
         android:layout_marginTop="70dp"
