--- a/app/src/main/res/layout/activity_rigister.xml
+++ b/app/src/main/res/layout/activity_rigister.xml
@@ -1,61 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="40dp"
     tools:context=".activities.RegisterActivity">
 
     <EditText
-        android:id="@+id/id_edit"
-        android:hint="用户名"
+        android:id="@+id/registerUserName"
+        android:hint="@string/userName"
         android:layout_marginTop="50dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="text"/>
 
     <EditText
-        android:id="@+id/password_edit"
-        android:layout_below="@+id/id_edit"
-        android:hint="密码"
+        android:id="@+id/registerPassword"
+        android:hint="@string/password"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"/>
 
     <EditText
-        android:id="@+id/password_edit_1"
-        android:hint="确认密码"
-        android:layout_below="@+id/password_edit"
+        android:id="@+id/registerConfirmPassword"
+        android:hint="@string/confirmPassword"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"/>
 
     <EditText
-        android:id="@+id/email_edit"
-        android:hint="邮箱"
-        android:layout_below="@+id/password_edit_1"
+        android:id="@+id/registerEmail"
+        android:hint="@string/email"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"/>
 
     <LinearLayout
         android:layout_marginTop="20dp"
-        android:layout_below="@+id/email_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <Button
-            android:text="返回"
+            android:id="@+id/returnToLogin"
+            android:text="@string/returnTo"
             android:layout_weight="0.5"
-            android:id="@+id/back_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/email_edit"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/register_do"
-            android:text="注册"
+            android:id="@+id/register"
+            android:text="@string/register"
             android:layout_weight="0.5"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
