--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="url">#2B2B2B</color>
+    <color name="black">#000000</color>
+    <color name="gray">#8E8E8E</color>
 </resources>
