--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,8 +4,7 @@
     <item
         android:id="@+id/add"
         android:icon="@drawable/add"
-        android:title="@string/delete"
+        android:title="@string/add"
         app:showAsAction="ifRoom">
-
     </item>
 </menu>
