--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/generate"
+        android:title="@string/generate">
+    </item>
+
+    <item
         android:id="@+id/add"
         android:icon="@drawable/add"
         android:title="@string/add"
